syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup;

service KeyManagerRegistraService {
  rpc cadastraChave (NovaChaveRequest) returns (NovaChaveResponse) {}
}

message NovaChaveRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

enum TipoChave{
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}
enum TipoConta{
  CONTA_DESCONHECIDA = 0;
  CORRENTE = 1;
  POUPANCA = 2;
}

message NovaChaveResponse {
  int64 pixId = 1;
}